--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "eject": "react-scripts eject",
         "flow": "flow",
         "deploy": "gh-pages -d build",
-        "predeploy": "yarn build",
+        "predeploy": "npm run build",
         "prettier": "prettier --write \"src/**/*.js\" \"docs/**/*.md\" README.md"
     },
     "eslintConfig": {
